--- a/TypeX Notepad/App.config
+++ b/TypeX Notepad/App.config
@@ -1,6 +1,46 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="TypeX_Notepad.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="TypeX_Notepad.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+    <userSettings>
+        <TypeX_Notepad.Properties.Settings>
+            <setting name="DarkModeSet" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="WordWrapSet" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="SpellCheckSet" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="StatusBarSet" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="AutoSaveSet" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </TypeX_Notepad.Properties.Settings>
+    </userSettings>
+    <applicationSettings>
+        <TypeX_Notepad.Properties.Settings>
+            <setting name="ClipBoardContent" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="FindTextContent" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="IsCopyCut" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </TypeX_Notepad.Properties.Settings>
+    </applicationSettings>
 </configuration>
