--- a/TypeX Notepad/App.config
+++ b/TypeX Notepad/App.config
@@ -17,13 +17,16 @@
                 <value>False</value>
             </setting>
             <setting name="WordWrapSet" serializeAs="String">
-                <value>True</value>
+                <value>Wrap</value>
             </setting>
             <setting name="SpellCheckSet" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="StatusBarSet" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="DefaultFont" serializeAs="String">
+                <value>Arial,24pt</value>
             </setting>
             <setting name="AutoSaveSet" serializeAs="String">
                 <value>False</value>
